[metadata]
name = BradyNasa
version = 1.0
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = 
author = NASA/Brady Contracts
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
include_package_data = true
packages = bradynasa
setup_requires =
    wheel
[options.entry_points]
console_scripts =
    bradynasa=bradynasa:main
